<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MOApplic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Home Page</string>
    <string name="log_in">Log in</string>
    <string name="signUp">Sign Up</string>
    <string name="name">name</string>
    <string name="Second">Welcome to MOA,</string>
    <string name="password">password</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_moahome_page"><a href="https://www.moa.fr/">MOAHomePage</a></string>
    <string name="medium_text">Medium Text</string>
    <string name="your_account">Your Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="description"> YOUR_DESCRIPTION_HERE </string>
    <string name="title_activity_sign_up1">Sign_up1</string>
    <string name="email">Email</string>
    <string name="slide_show">Our gallery</string>
    <string name="password1">Password</string>
    <string name="password2">Retype password</string>
    <string name="username">Username</string>
    <string name="favouriteSite">Favorite</string>
    <string name="title_activity_slideshow">Sideshow</string>
    <string name="title_activity_slide_show">MainActivity</string>

</resources>
