<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activities.SignUpActivity" >

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/name_editText"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/password_textView1"
        android:layout_marginTop="152dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/password_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/name_textView"
        android:layout_alignRight="@+id/password_editText1"
        android:layout_below="@+id/password_textView2"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="34dp"     
        android:text="@string/password1"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/password_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_editText1"
        android:layout_alignRight="@+id/password_editText2"
        android:layout_below="@+id/email_textView"
        android:layout_centerVertical="true"
        android:text="@string/password2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/email_editText"
        android:layout_above="@+id/password_textView2"
        android:layout_below="@+id/favouriteSite_textView"
        android:layout_marginTop="17dp"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <TextView
        android:id="@+id/favouriteSite_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/favouriteSite_editText"
        android:layout_above="@+id/email_textView"
        android:layout_marginTop="17dp"
        android:text="@string/favouriteSite"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_textView2"
        android:layout_below="@+id/password_textView2"
        android:layout_marginTop="75dp"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sign_up_button"
        android:layout_toRightOf="@+id/password_textView2"
        android:text="@string/cancel" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/password_editText1"
        android:layout_alignLeft="@+id/name_textView"
        android:layout_marginRight="41dp"
        android:ems="10" android:inputType="text">

        
    </EditText>

    <EditText
        android:id="@+id/password_editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/name_editText"
        android:layout_alignLeft="@+id/password_textView1"
        android:layout_below="@+id/password_editText2"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password_editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_editText1"
        android:layout_below="@+id/email_editText"
        android:layout_alignLeft="@+id/password_textView2"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_editText2"
        android:layout_below="@+id/favouriteSite_editText"
        android:layout_alignLeft="@+id/email_textView"
        android:ems="10"
        android:inputType="textEmailAddress" />

    
    <EditText
        android:id="@+id/favouriteSite_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_editText"
        android:layout_alignLeft="@+id/favouriteSite_textView"
        android:ems="10" 
        android:inputType="text"/>
</RelativeLayout>
    